--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -31,7 +31,7 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
-          install: make autoconf automake libtool autogen perl make texinfo
+          install: make autoconf automake libtool autogen perl make texinfo flex bison gas gprof 
           
       - name: download compiler
         shell: cmd
