--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -64,7 +64,7 @@ jobs:
             g++ --version && 
             ./configure --help &&
             ./configure --with-gmp="$gmp_root" --with-mpfr="$mpfr_root" --prefix="$(pwd)/${{ env.installationPath }}" &&
-            make && make install
+            make VERBOSE=1 && make VERBOSE=1 install
             
       # - name: copy customized openssl-config.cmake
       #   shell: cmd
