--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -65,7 +65,7 @@ jobs:
             ./configure --help &&
             ./configure --with-gmp="$gmp_root" --with-mpfr="$mpfr_root" --prefix="$(pwd)/${{ env.installationPath }}" &&
             cat Makefile
-            make VERBOSE=1 && make VERBOSE=1 install
+            make VERBOSE=1 all-binutils all-bfd && make VERBOSE=1 install
             
       # - name: copy customized openssl-config.cmake
       #   shell: cmd
